src/test/deca/context/valid/print/printx-string-string.deca
// Description:
//    Programme minimaliste utilisant une concatenation 
//    de chaines comme parametre de printx.
//
// Resultats:
//    Hello world

{
    printx("Hello", "World");
}