src/test/deca/context/invalid/print/printlx-null.deca
// Description:
//    Test print null.
//
// Resultats:
//    ok

{
    printlx(null);
}